# oz_01_main-002-BE

./: .coveragerc  .gitignore  Dockerfile  README.md  conftest.py  main.py  pyproject.toml  reademe.md  test.sh
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: __init__.py  connection_manager.py
app/configs/: __init__.py  base_settings.py  database_settings.py  deploy_settings.py
app/dtos/: address_response.py  auction_response.py  carries_response.py  category_response.py  chat_response.py  image_response.py  inspection_respones.py  inspection_response.py  payment_response.py  product_response.py  terms_agreement_respones.py  terms_agreement_response.py  terms_respones.py  terms_response.py  user_response.py  winner_response.py
app/models/: address.py  auctions.py  carries.py  categories.py  chat.py  common.py  images.py  inspections.py  payments.py  products.py  terms.py  terms_agreements.py  users.py  winners.py
app/routers/: address_router.py  auction_router.py  carries_router.py  category_router.py  chat_router.py  hashcheck.py  image_router.py  inspector_router.py  payment_router.py  product_router.py  term_agreement_router.py  term_router.py  user_router.py  winner_router.py
app/services/: address_service.py  auction_service.py  carries_service.py  category_service.py  chat_service.py  image_service.py  inspection_service.py  payment_service.py  product_service.py  term_agreement_service.py  term_service.py  user_service.py  winner_service.py
app/static/: index.html
app/tests/: fixtures.py  test_address_router.py  test_auction_router.py  test_carries_router.py  test_category_router.py  test_inspection_router.py  test_payment_router.py  test_prodcut_router.py  test_term_agreement_router.py  test_term_router.py  test_term_service.py  test_user_router.py  test_winner_router.py
app/utils/: redis_.py  s3_.py  secrets_.py
asd/: apps.py  tests.py
config/: settings.py
scripts/: run.sh
(+2 files in other folders)
